@@ -23,4 +23,4 @@ config.gem 'cucumber',    :lib => false,        :version => '>=0.4.2' unless Fil
 config.gem 'webrat',      :lib => false,        :version => '>=0.5.3' unless File.directory?(File.join(Rails.root, 'vendor/plugins/webrat'))
 config.gem 'rspec',       :lib => false,        :version => '>=1.2.9' unless File.directory?(File.join(Rails.root, 'vendor/plugins/rspec'))
 config.gem 'rspec-rails', :lib => false,        :version => '>=1.2.9' unless File.directory?(File.join(Rails.root, 'vendor/plugins/rspec-rails'))
-config.gem 'bmabey-email_spec', :lib => 'email_spec', :source => 'http://gems.github.com', :version => '>=0.3.4'
+config.gem 'email_spec',  :lib => 'email_spec', :version => '>=0.3.5', :source => 'http://gemcutter.org'
