@@ -4,8 +4,8 @@ load_template("#{SOURCE}/templates/helper.rb") unless self.respond_to? :file_inj
 ##############################
 # Monitor
 ##############################
-gem 'josevalim-rails-footnotes', :lib => 'rails-footnotes', :version => '>=3.6.2',
-  :source => 'http://gems.github.com', :env => 'development'
+gem 'rails-footnotes', :lib => 'rails-footnotes', :version => '>=3.6.3',
+  :source => 'http://gemcutter.org', :env => 'development' # josevalim
 
 rake 'gems:install', :sudo => true, :env => 'development'
 
