@@ -1,5 +1,6 @@
 == master
 
+* change gem source to http://gemcutter.org
 
 == 0.5.0 released 2009-9-9
 
